name:                forvis-stack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/forvis-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable forvis-stack
  hs-source-dirs:      ../src
  main-is:             Main.hs
  other-modules:       Address_Map
                     , Arch_Defs
                     , ALU
                     , Bit_Utils
                     , FP_Bit_Utils
                     , CSR_File
                     , Elf
                     , FPR_File
                     , Forvis_Spec
                     , GPR_File
                     , MMIO
                     , Machine_State
                     , Main_Run_Program
                     , Main_Tandem_Verifier
                     , Main_Test_Virtual_Mem
                     , Mem_Ops
                     , Memory
                     , Read_Hex_File
                     , Run_Program
                     , UART
                     , Virtual_Mem

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , softfloat-hs
                     , elf
                     , containers >= 0.5.11 && < 0.5.12
                     , bytestring >= 0.10.8 && < 0.10.9
